tests/negative/test-fail-type1.std
Fatal error: exception Failure("type_err:variable initial value type mismatch")
